<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:padding="18dp"
    >

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_avengers_tower"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@+id/logoImageView"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/greetingTextView"
        android:autofillHints="username"
        android:hint="@string/username"
        android:layout_marginTop="24dp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:layout_marginTop="24dp"
        android:inputType="textPassword"
        android:layout_below="@id/usernameEditText"
        />
    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/passwordEditText"
        android:layout_alignParentEnd="true"
        android:padding="6dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginEnd="8dp"
        />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/forgotPasswordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:textAllCaps="false"
        />
    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/blue"
        />

</RelativeLayout>