<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16sp"
        />
    <EditText
        android:id="@+id/fullnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="text"
        android:layout_marginTop="16dp"
        />
    <EditText
        android:id="@+id/phonenumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:layout_marginTop="16sp"
        android:drawableStart="@drawable/ic_phone"
        />
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_marginTop="16sp"

        />
    <RadioGroup
        android:id="@+id/genderRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            />
        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            />
        <RadioButton
            android:id="@+id/otherRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            />
    </RadioGroup>

    <Spinner
        android:id="@+id/nationalitySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/entries"
        android:layout_marginTop="16dp"
        />

    <CheckBox
        android:id="@+id/termsandconditionCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:layout_marginTop="16dp"
        android:textColor="@color/blue"
        />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@null"
        />

</LinearLayout>